--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ li {
     display: flex;
     justify-content: space-between;
     z-index: -100;
-    background: url('../image/home-bg.jpg') no-repeat;
+    background: url('./assets/home-bg.jpg') no-repeat;
     height: 700px;
     background-position: bottom;
 
